# crucible

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  crucible-overview.md  crucible-testing.md  justfile  notes.md  tasks.md  troubleshooting.md
.github/workflows/: ci.yaml
charts/crucible/: Chart.yaml  values.yaml
charts/crucible/crds/: crucibleflinkjobs.yaml  crucibleplatforms.yaml  cruciblesparkjobs.yaml
charts/crucible/templates/: _helpers.tpl  api-deployment.yaml  operator-deployment.yaml  rbac.yaml  serviceaccount.yaml
crates/crucible-api/: Cargo.toml
crates/crucible-api/src/: main.rs
crates/crucible-cli/: Cargo.toml
crates/crucible-cli/src/: main.rs
crates/crucible-operator/: Cargo.toml
crates/crucible-operator/src/: context.rs  health.rs  main.rs
crates/crucible-operator/src/reconcilers/: celeborn.rs  flink_operator.rs  history_server.rs  mod.rs  platform.rs  spark_job.rs  volcano.rs
crates/crucible-operator/tests/: platform_lifecycle.rs  spark_job_lifecycle.rs
crates/crucible-store/: Cargo.toml
crates/crucible-store/src/: client.rs  lib.rs  path.rs  s3.rs
crates/crucible-types/: Cargo.toml
crates/crucible-types/src/: error.rs  flink.rs  lib.rs  platform.rs  spark.rs  state.rs
docker/: api.Dockerfile  operator.Dockerfile
docker/flink/: Dockerfile
docker/spark/: Dockerfile
test/: kind-values.yaml
test/fixtures/: minio.yaml  platform.yaml
