[package]
name = "crucible-api"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "REST API server for Crucible"

[dependencies]
crucible-types.workspace = true
crucible-store.workspace = true
kube.workspace = true
k8s-openapi.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
