[package]
name = "crucible-operator"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Kubernetes operator for Crucible platform management"

[dependencies]
crucible-types.workspace = true
kube.workspace = true
k8s-openapi.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
axum.workspace = true
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
rustls = "0.23"

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
kube = { workspace = true, features = ["runtime", "derive", "client"] }
k8s-openapi = { workspace = true }
serde_json.workspace = true
tracing-subscriber.workspace = true
rustls = "0.23"
