[package]
name = "crucible-types"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "CRD structs, state machine, and error types for Crucible"

[dependencies]
kube = { workspace = true, features = ["derive"] }
k8s-openapi.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio-test.workspace = true
